<resources>
    <string name="app_name">Basketball Score Counter</string>
    <string name="team_a">LA Lakers</string>
    <string name="_0">0</string>
    <string name="free_throw">Free throw</string>
    <string name="_2_points">+2 Points</string>
    <string name="_3_points">+3 Points</string>
    <string name="cavaliers">Cavaliers</string>
    <string name="la_lakers">LA Lakers</string>
    <string name="reset">Reset</string>
</resources>
