<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_main"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:textStyle="bold|italic"
                android:text="@string/la_lakers"
                android:textColor="#616161"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tvScoreLakers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/tvAddThreeForLakers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:textStyle="bold"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/_3_points" />

            <Button
                android:id="@+id/tvAddTwoForLakers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:textStyle="bold"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/_2_points" />

            <Button
                android:id="@+id/tvAddOneForLakers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/free_throw" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="16dp"
                android:textStyle="bold|italic"
                android:text="@string/cavaliers"
                android:textColor="#616161"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvScoreCavs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fontFamily="sans-serif-light"
                android:gravity="center"
                android:paddingBottom="24dp"
                android:text="@string/_0"
                android:textColor="#000000"
                android:textSize="56sp" />

            <Button
                android:id="@+id/tvAddThreeForCavs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:textStyle="bold"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/_3_points" />

            <Button
                android:id="@+id/tvAddTwoForCavs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:background="@drawable/button"
                android:textStyle="bold"
                android:text="@string/_2_points" />

            <Button
                android:id="@+id/tvAddOneForCavs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button"
                android:textStyle="bold"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="22dp"
                android:text="@string/free_throw" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnResetScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:text="@string/reset" />


</RelativeLayout>